fix display cropper avatar

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -107,6 +107,55 @@ body {
     color: $secondary-color;
 }
 
+.preview {
+    overflow: hidden;
+    width: 250px !important;
+    height: 250px !important;
+}
+
+img.avatar {
+    border-radius: 50%;
+    margin: auto;
+    display: block;
+}
+
+.avatar-update {
+    position: relative;
+    margin: auto;
+    width: fit-content;
+    background-color: $secondary-color;
+    border-radius: 50%;
+    border: 3px solid $secondary-color;
+
+    & img {
+        opacity: 1;
+
+        &:hover {
+            opacity: 0.8;
+        }
+    }
+
+    & .btn {
+        display: none;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        background-color: grey;
+        color: white;
+        font-size: 25px;
+        padding: 12px 24px;
+        border: none;
+        cursor: pointer;
+        border-radius: 5px;
+
+        &:hover {
+            background-color: #555;
+        }
+    }
+}
+
 .project-image-update {
     display: inline-block;
     position: relative;
@@ -187,13 +236,6 @@ li.active {
         -ms-user-select: none; /* Internet Explorer/Edge */
             user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome, Edge, Opera and Firefox */
-}
-
-img.avatar {
-    border-radius: 50%;
-    border: 4px solid $secondary-color;
-    margin: auto;
-    display: block;
 }
 
 nav {
